# braindb

./: .env.example  .gitignore  BRAINDB_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_source_column.py  003_activity_log.py  004_keyword_embeddings.py
braindb/: config.py  db.py  ingest_watcher.py  main.py
braindb/agent/: __init__.py  agent.py  tools.py
braindb/agent/prompts/: system_prompt.md
braindb/routers/: agent.py  entities.py  memory.py  relations.py
braindb/schemas/: entities.py  relations.py  search.py
braindb/services/: activity_log.py  context.py  embedding_service.py  graph.py  keyword_service.py  search.py
data/sources/: README.md
scripts/: init_extensions.sql
skills/braindb/: SKILL.md
skills/braindb-agent/: SKILL.md
tests/: README.md  conftest.py  test_agent.py  test_entities.py  test_ingest.py  test_relations.py  test_search.py  test_split_chunks.py
